ビューをフルスクリーン化

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Map</string>
-    <string name="search_button">Search</string>
+    <string name="search_button">現在地</string>
     <string name="input_here">input here</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-
 </resources>
